--- a/src/app/dailogs/image-preview/image-preview.component.html
+++ b/src/app/dailogs/image-preview/image-preview.component.html
@@ -1,8 +1,8 @@
-<div class="dialog-content bg-secondaryBg rounded-md p-4">
+<div class="dialog-content bg-secondaryBg p-4">
     <div class="flex flex-col">
-        <div class="max-h-[694px] flex justify-center items-center">
+        <div class="max-h-[694px] bg-secondary-heiglight flex justify-center items-center">
             @if (data.images[currentIndex].presigned_url) {
-                <img  [src]="data.images[currentIndex]?.presigned_url" alt="Preview" class="max-h-[694px] w-full">
+                <img  [src]="data.images[currentIndex]?.presigned_url" alt="Preview" class="max-h-[595px] object-none w-full">
             } @else {
                 <span class="text-lg leading-6 font-semibold text-secondary-heiglight">Image not found</span>
             }
