Library drawer on wheel scroll data api call and loader fixes

--- a/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.scss
+++ b/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.scss
@@ -318,10 +318,10 @@ span[aria-hidden="true"] {
     border-radius: 10px !important;
     color: #191E22 !important;
   }
-  .prev{
+  .md-drppicker th.available.prev{
    background-image: url('../../../assets/svg-icons/prev-icon.svg') !important;
   }
-  .next{
+  .md-drppicker th.available.next{
     background-image: url('../../../assets/svg-icons/prev-icon.svg') !important;
    }
    .md-drppicker .dropdowns{
