--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="z-[1000000] absolute h-screen"> <ngx-ui-loader></ngx-ui-loader></div>
+@if (isLoading) {
+    <div class="z-[1000000] absolute h-screen" > <ngx-ui-loader></ngx-ui-loader></div>
+}
 <app-home></app-home>
 
 
