--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,9 @@
     <img src="assets/svg-icons/location-icon.svg" alt="" *ngIf="toggleType !== 'library'" />
     <span class="text-xs leading-[18px] font-Barlow uppercase font-bold" [ngClass]="toggleType === 'library' ? 'text-yellow':'text-secondaryText'">library</span>
 </div>
-<div class="flex items-center justify-center min-w-[119px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
-    <img src="assets/svg-icons/sites-icon.svg" alt="" />
+<div (click)="onToggleDrawer('Sites')" class="flex items-center justify-center min-w-[119px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
+    <img src="assets/svg-icons/sites-icon.svg" alt="" *ngIf="toggleType !== 'Sites'" />
+    <img src="assets/svg-icons/sites-active-icon.svg" alt="" *ngIf="toggleType === 'Sites'" />
     <span class="text-xs leading-[18px] font-Barlow uppercase font-bold" [ngClass]="toggleType === 'Sites' ? 'text-yellow':'text-secondaryText'">Sites</span>
 </div>
 <div class="flex items-center justify-center min-w-[134px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
