--- a/src/app/components/sidebar-drawer/sidebar-drawer.component.html
+++ b/src/app/components/sidebar-drawer/sidebar-drawer.component.html
@@ -2,5 +2,7 @@
     @if (type=='library') {  <div>
         <app-library [endDate]="endDate" [startDate]="startDate" (closeDrawer)="closeDrawer($event)" (rowHoveredData)="highlightData($event)" (notifyParent)="handleData($event)" [polygon_wkt]="polygon_wkt"></app-library>
     </div>
+} @else if(type === 'Sites'){
+    <app-sites (closeDrawer)="closeDrawer($event)"></app-sites>
 }
 </div>
