Map bugs fixes on safari browser

--- a/src/app/components/sidebar-drawer/sidebar-drawer.component.html
+++ b/src/app/components/sidebar-drawer/sidebar-drawer.component.html
@@ -4,5 +4,7 @@
     </div>
 } @else if(type === 'Sites'){
     <app-sites (closeDrawer)="closeDrawer($event)"></app-sites>
+} @else if(type === 'Groups'){
+    <app-groups (closeDrawer)="closeDrawer($event)"></app-groups>
 }
 </div>
