--- a/src/app/common/groups-list/groups-list.component.html
+++ b/src/app/common/groups-list/groups-list.component.html
@@ -1,23 +1,81 @@
-<div class="font-Barlow" >
-    <!-- Group Header -->
-    <div class="group-header flex gap-[15px] text-sm font-medium text-secondaryText p-[15px] border-y border-y-solid border-y-custom-border" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'" (click)="toggle(group)">
-        @if (isExpanded) {
-            <span class="w-[14px] h-[12px]">
-                <img src="assets/svg-icons/folder-icon-expanded.svg" alt="Search" class="w-[14px]" />
-            </span>
-        } @else {
-            <span class="!w-[14px] h-[12px]">
-                <img src="assets/svg-icons/folder-icon.svg" alt="Search" class="w-[14px]" />
-            </span>
-        }
-      {{ group.name }}
-    </div>
-
-    <!-- Subgroups -->
-    @if (isExpanded){<div class="subgroup" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'">
-        @for (subgroup of group.subgroups; track subgroup) {
-        <app-groups-list [group]="subgroup" [backgroundColor]="backgroundColor"></app-groups-list>
-         }
-    </div>
+@if(type === 'Groups'){
+    <div class="font-Barlow" >
+        <!-- Group Header -->
+            <!-- @if (isExpanded) {
+                <span class="w-[14px] h-[12px]">
+                    <img src="assets/svg-icons/folder-icon-expanded.svg" alt="Search" class="w-[14px]" />
+                </span>
+            } @else {
+                <span class="!w-[14px] h-[12px]">
+                    <img src="assets/svg-icons/folder-icon.svg" alt="Search" class="w-[14px]" />
+                </span>
+            } -->
+          <div (click)="toggle(group)" class="py-[10px] cursor-pointer flex border-y border-y-solid border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
+            <div class="min-w-[46%] flex gap-[15px]">
+                <img [src]="activeIndex?.id == group?.id ? 'assets/svg-icons/folder-icon-expanded.svg':'assets/svg-icons/folder-icon.svg'" alt="" />
+                <span >{{group.name}}</span>
+            </div>
+            <span class="min-w-[15%]"></span>
+            <span class="min-w-[17%]">{{group.created_at | dateFormat}}</span>
+            <span class="min-w-[15%]">{{group.surface_area.toFixed(3)}}km²</span>
+            <div class="flex gap-[15px] items-center">
+                <span class="text-secondary-heiglight">{{group.total_objects}}</span>
+                <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
+                    <img src="assets/svg-icons/nav-menu-icon.svg" />
+                </span>
+                <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
+                    <div class="inline-flex p-[15px] font-Barlow flex-col items-start gap-[15px]">
+                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Notifications</span>
+                        <div class="rounded-[25px] bg-primaryBg flex items-center justify-between">
+                            <button 
+                                class="text-xs leading-[18px] py-[9px] font-semibold my-[7px] mr-[10px] ml-[7px] rounded-[19px] px-[20px]"
+                                [ngClass]="group?.notification ?'text-[#453303] bg-yellow':'text-secondary-heiglight'">On
+                               </button>
+                            <button 
+                                class="text-xs leading-[18px] py-[9px] font-semibold my-[7px] mr-[7px] rounded-[19px] px-[20px] "
+                                [ngClass]="!group?.notification?'text-[#453303] bg-yellow':'text-secondary-heiglight'">Off</button>
+                        </div>
+                        <span *ngIf="group.subgroups.length" class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Add subgroup</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Rename</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer">Delete</span>
+                    </div>
+                </mat-menu>
+            </div>
+        </div>
+        
+    
+        <!-- Subgroups -->
+        @if (activeIndex?.id == group?.id){<div class="" >
+            @for (subgroup of group.subgroups; track subgroup;let i = $index) {
+            <div class="ml-[30px] overflow-hidden transition-all duration-300 ease-in-out">
+            <app-groups-list [group]="subgroup" [index]="i" [type]="'Groups'" ></app-groups-list>
+            </div>
+             }
+        </div>
+    }
+      </div>
+} @else{
+    <div class="font-Barlow" >
+        <!-- Group Header -->
+        <div class="group-header flex gap-[15px] text-sm font-medium text-secondaryText p-[15px] border-y border-y-solid border-y-custom-border" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'" (click)="toggle(group)">
+            @if (isExpanded) {
+                <span class="w-[14px] h-[12px]">
+                    <img src="assets/svg-icons/folder-icon-expanded.svg" alt="Search" class="w-[14px]" />
+                </span>
+            } @else {
+                <span class="!w-[14px] h-[12px]">
+                    <img src="assets/svg-icons/folder-icon.svg" alt="Search" class="w-[14px]" />
+                </span>
+            }
+          {{ group.name }}
+        </div>
+    
+        <!-- Subgroups -->
+        @if (isExpanded){<div class="subgroup" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'">
+            @for (subgroup of group.subgroups; track subgroup) {
+            <app-groups-list [group]="subgroup" [backgroundColor]="backgroundColor"></app-groups-list>
+             }
+        </div>
+    }
+      </div>
 }
-  </div>
