--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,8 +15,8 @@
     <img src="assets/svg-icons/sites-active-icon.svg" alt="" *ngIf="toggleType === 'Sites'" />
     <span class="text-xs leading-[18px] font-Barlow uppercase font-bold" [ngClass]="toggleType === 'Sites' ? 'text-yellow':'text-secondaryText'">Sites</span>
 </div>
-<div class="flex items-center justify-center min-w-[134px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
-    <img src="assets/svg-icons/file-icon.svg" alt="" />
+<div (click)="onToggleDrawer('Groups')" class="flex items-center justify-center min-w-[134px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
+    <img [src]="toggleType === 'Groups' ? 'assets/svg-icons/file-icon-active.svg' :'assets/svg-icons/file-icon.svg'" alt="" />
     <span class="text-secondary text-xs leading-[18px] font-Barlow uppercase font-bold" [ngClass]="toggleType === 'Groups' ? 'text-yellow':'text-secondaryText'">Groups</span>
 </div>
 <span class="flex justify-between  w-[1252px] h-[40px] py-1.5 px-5 bg-inputBg">
